# soloud_cmake_mre

./: CMakeLists.txt
src/: main.cpp
